syntax = "proto3";
import "Organization.proto";
import "Counteragent.proto";
import "DocumentId.proto";

package Diadoc.Api.Proto;

message GetOrganizationsByInnListRequest {
    repeated string InnList = 1;
}

message OrganizationWithCounteragentStatus {
    Organization Organization = 1;
    optional CounteragentStatus CounteragentStatus = 2;
    optional sfixed64 LastEventTimestampTicks = 3;
    optional string MessageFromCounteragent = 4;
    optional string MessageToCounteragent = 5;
    optional DocumentId InvitationDocumentId = 6;
    optional string CounteragentGroupId = 7;
}

message GetOrganizationsByInnListResponse {
    repeated OrganizationWithCounteragentStatus Organizations = 1;
}
